css/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Playfair+Display:ital,wght@1,700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');

body { 
  margin: 0px;
  padding: 0px;
  box-sizing: border-box;
  outline-style: none;
  overflow-x: hidden;
  font-family: "Bebas Neue", sans-serif; 
}

/* html {
  font-size: 12px;
  color: #000;
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
} */


:root {
  --txtaccent: #fff;
  --txtaccent1: #9d9d9f;
  --textaccent2: #73757e;
  --textaccent3: #484848;
  --txtaccent4: #000;
  --txtaccent5: #e5e5e5;
  --haccent: #0358b8;
  --haccent_withOpacity: #0358b8;
  --haccent2: #022887;
  --bgaccent: #1a1c27;
  --bgaccent_withOpacity: #1a1c27f5;
  --text-dark: #333;
  --text-light: #fff;
  --font-family: "Roboto", Arial, sans-serif;
  --primary-green: #014701; 
  --secondary-green: #005500; 
  --text-dark: #333;
  --font-title: 'Playfair Display', serif; 
  --font-body: 'Arial', sans-serif;
}


/* Carousel */


.carousel {
  width: 100%;
  height: 75vh; 
  position: relative;
  overflow: hidden;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 90%;
  
  
}

.carousel::before {
  content: ""; /* Elemento vazio para criar o overlay */
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.7); 
  z-index: 1; /* Coloca o overlay acima das imagens */
  pointer-events: none; /* Permite clicar nos elementos abaixo */
}

.carousel-slide {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-size: cover;
  background-position: center;
  opacity: 0;
  transition: opacity 1s ease-in-out;
}

.carousel-slide.active {
  opacity: 1;
}



/* Navbar */
.navbar {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #1c1c1c;
  padding: 10px 20px;
  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.5);
}


.hamburger {
  display: none; 
  font-size: 24px;
  color: #ffffff;
  cursor: pointer;
}


.nav-links {
  align-items: center;
  display: flex;
  list-style: none;
  gap: 30px; 
  margin: 0;
  padding: 0;
}


.navbar-item {
  text-align: center;
  text-decoration: none;
  color: #8c8c8c;
  font-size: 14px;
  display: flex;
  flex-direction: column;
  align-items: center;
  transition: all 0.3s ease-in-out;
}

.navbar-item i {
  font-size: 20px;
  margin-bottom: 5px;
  color: #8c8c8c;
  transition: color 0.3s ease-in-out;
}


.navbar-item:hover,
.navbar-item.active {
  color: #007bff;
}

.navbar-item:hover i,
.navbar-item.active i {
  color: #007bff;
}


@media (max-width: 768px) {
  .hamburger {
    display: block; 
  }

  .nav-links {
    display: none;
    flex-direction: column;
    gap: 20px;
    position: absolute;
    top: 60px;
    right: 10px;
    background-color: #1c1c1c;
    padding: 20px;
    border-radius: 10px;
    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
    width: 200px;
  }

  .nav-links.active {
    display: flex; 
  }
}



.main-container .fade-in {
  opacity: 0; 
  transform: translateY(20px); 
  transition: opacity 1.6s ease-out, transform 1.6s ease-out; 
  text-align: center;
}


.main-container .fade-in.show {
  opacity: 1;
  transform: translateY(0); 
}

/* whatsapp button */

 .whatsapp-button {
  position: fixed;
  bottom: 20px;
  right: 20px;
  z-index: 1000;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100px;
  height: 100px;
  background-color: #25d366;
  border-radius: 50%;
  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
  text-decoration: none;
}

.whatsapp-button img {
  width: 78px;
  height: 78px;
} 


/* ISABEL  */

.isabel-banner { 
  text-align: center;
  background-size: cover;
  background-position: center;
  padding: 10px;
  color: var(--primary-green);
  font-family: var(--font-body);
}

.isabel-title {
  font-family: var(--font-title);
  font-size: 10rem; 
  color: var(--primary-green);
  margin: 0;
}

.isabel-subtitle {
  font-style: italic;
  font-size: 2.2rem;
  color: var(--primary-green);
  margin: 0px 0;
}

.isabel-location {
  font-size: 1.0rem;
  font-weight: bold;
  color: var(--text-dark);
  margin: 10px 0 0;
}



.banner {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 20px;
  font-family: var(--font-family);
  text-align: center;
}




.banner-section {
  max-width: 600px;
}

.banner-section h1 {
  font-size: 1.5rem;
  font-weight: bold;
  color: var(--primary-color);
  margin-bottom: 10px;
}

.banner-section h1 .large-text {
  font-size: 2.5rem;
  color: var(--primary-green);
}

.banner-section h1 .highlight {
  color: var(--secondary-green);
}

.banner-section p {
  font-size: 1.0rem;
  line-height: 1.5;
  color: var(--text-dark);
}

.banner-section p .bold {
  font-weight: bold;
  color: var(--primary-green);
}

.banner-divider {
  width: 2px;
  height: 130px;
  background-color: var(--txtaccent4);
}

.divider-wrapper {
  display: flex;
  justify-content: center;
  align-items: center; 
  gap: 10px;
}

.img1 {

  position: absolute; /* Faz o logo sair do fluxo padrão do layout */
  top: 50%; /* Centraliza verticalmente com base no elemento pai */
  left: 50%; /* Centraliza horizontalmente com base no elemento pai */
  transform: translate(-50%, -50%); /* Move o centro do logo para alinhar com o ponto central */
  z-index: 100; /* Garante que o logo esteja acima do carrossel */
  height: 500px; /* Mantém a proporção da imagem */
  width: 500px; /* Define a largura fixa */

}
/* ... */

